crates/parser/tests/parse/subtyping-malformed.snap
---
source: crates/parser/tests/parse.rs
---
ROOT@0..89
  MODULE@0..88
    L_PAREN@0..1 "("
    KEYWORD@1..7 "module"
    WHITESPACE@7..10 "\n  "
    TYPE_DEF@10..21
      L_PAREN@10..11 "("
      KEYWORD@11..15 "type"
      WHITESPACE@15..16 " "
      ERROR@16..17 "("
      ERROR@17..19 "su"
      ERROR@19..20 ")"
      R_PAREN@20..21 ")"
    WHITESPACE@21..24 "\n  "
    TYPE_DEF@24..36
      L_PAREN@24..25 "("
      KEYWORD@25..29 "type"
      WHITESPACE@29..30 " "
      SUB_TYPE@30..35
        L_PAREN@30..31 "("
        KEYWORD@31..34 "sub"
        R_PAREN@34..35 ")"
      R_PAREN@35..36 ")"
    WHITESPACE@36..39 "\n  "
    TYPE_DEF@39..54
      L_PAREN@39..40 "("
      KEYWORD@40..44 "type"
      WHITESPACE@44..45 " "
      SUB_TYPE@45..53
        L_PAREN@45..46 "("
        KEYWORD@46..49 "sub"
        WHITESPACE@49..50 " "
        ERROR@50..51 "("
        ERROR@51..52 ")"
        R_PAREN@52..53 ")"
      R_PAREN@53..54 ")"
    WHITESPACE@54..57 "\n  "
    TYPE_DEF@57..86
      L_PAREN@57..58 "("
      KEYWORD@58..62 "type"
      WHITESPACE@62..63 " "
      SUB_TYPE@63..85
        L_PAREN@63..64 "("
        KEYWORD@64..67 "sub"
        WHITESPACE@67..68 " "
        INDEX@68..69
          UNSIGNED_INT@68..69 "0"
        WHITESPACE@69..70 " "
        ERROR@70..75 "final"
        WHITESPACE@75..76 " "
        STRUCT_TYPE@76..84
          L_PAREN@76..77 "("
          KEYWORD@77..83 "struct"
          R_PAREN@83..84 ")"
        R_PAREN@84..85 ")"
      R_PAREN@85..86 ")"
    WHITESPACE@86..87 "\n"
    R_PAREN@87..88 ")"
  WHITESPACE@88..89 "\n"

error: expected `sub`
  ┌─ subtyping-malformed.wat:2:10
  │
2 │   (type (su))
  │          ^^^

error: expected `(`
  ┌─ subtyping-malformed.wat:3:13
  │
3 │   (type (sub))
  │             ^

error: expected `array`
  ┌─ subtyping-malformed.wat:4:15
  │
4 │   (type (sub ()))
  │               ^

error: expected `(`
  ┌─ subtyping-malformed.wat:5:16
  │
5 │   (type (sub 0 final (struct)))
  │                ^^^^^
